<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/add_song_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_song_title"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/title_start"
        android:textColor="@color/blueTitle"
        android:shadowColor="@color/lightGrey"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_song_subtitle"
        android:textColor="@color/blueSubTitle"
        android:textSize="15dp"
        android:id="@+id/sub_tile"
        android:layout_margin="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_song_text"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/text_song_name"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_song_name"
            android:layout_alignBaseline="@id/text_song_name"
            android:hint="@string/name_song_hint"
            android:id="@+id/edit_text_song_name"
            android:layout_marginEnd="8dp"
            android:textSize="15dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writer_song_text"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/text_song_writer"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_song_writer"
            android:layout_alignBaseline="@id/text_song_writer"
            android:hint="@string/writer_song_hint"
            android:id="@+id/edit_text_song_writer"
            android:layout_marginEnd="8dp"
            android:textSize="15dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_song_text"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/text_song_link"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_song_link"
            android:layout_alignBaseline="@id/text_song_link"
            android:hint="@string/link_song_hint"
            android:id="@+id/edit_text_song_link"
            android:layout_marginEnd="8dp"
            android:textSize="15dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera_button"
            android:background="@null"
            android:id="@+id/camera_button"
            android:layout_marginEnd="5dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gallery_button"
            android:background="@null"
            android:layout_toEndOf="@id/camera_button"
            android:layout_alignBaseline="@id/camera_button"
            android:id="@+id/gallery_button"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/bluePicture"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/gallery_button"
            android:id="@+id/picture"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save_button"
            android:background="@null"
            android:id="@+id/save_button"
            android:layout_marginEnd="5dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel_button"
            android:background="@null"
            android:layout_toEndOf="@id/save_button"
            android:layout_alignBaseline="@id/save_button"
            android:id="@+id/cancel_button"/>
    </RelativeLayout>
</LinearLayout>